# grad-agent

./: .gitignore  README.md  catalog.json  catalog_sync.py  daily_run.py  hook.py  lor.py  mark_promoted.py  outreach_log.py  profile.py  programs.py  programs.yaml  projects.py  pyproject.toml  requirements.txt  server.json  server.py  tracker.py
.github/workflows/: ci.yml
drafters/: article.py  cold_email.py  sop_latex.py
grad_agent/: catalog_sync.py  cli.py  config.py  daily_run.py  followups.py  freshness.py  hook.py  lor.py  mark_promoted.py  outreach_log.py  prep.py  profile_pdf.py  program_targeting.py  programs.py  projects.py  regions.py  scholarships.py  server.py  tracker.py
grad_agent/drafters/: cold_email.py  sop_latex.py
grad_agent/outputs/: imap_ingest.py  mailer.py
grad_agent/sources/: arxiv.py  hf.py  recruiting.py  semantic_scholar.py
grad_agent/templates/: com.gradagent.daily.plist  env.example  grad-agent-daily.service  grad-agent-daily.timer  grad-agent-daily.xml  profile.example.yaml  scholarships.example.yaml
outputs/: mailer.py  portfolio_api.py
sources/: github.py  openreview.py  recruiting.py  semantic_scholar.py  websearch.py
tests/: test_smoke.py
